[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Bots/Bot.gd" type="Script" id=2]
[ext_resource path="res://bin/Bot.gdns" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 706.249, 458.787 )

[node name="Bot" groups=[
"Bot",
"Unit",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Brain" type="Node" parent="." index="6"]
script = ExtResource( 3 )

[node name="vision" type="Area2D" parent="." index="7"]

[node name="shape" type="CollisionShape2D" parent="vision" index="0"]
shape = SubResource( 1 )

[node name="VisionTimer" type="Timer" parent="." index="8"]

[node name="Camera2D" type="Camera2D" parent="." index="9"]
zoom = Vector2( 0.75, 0.75 )

[node name="RayCast_up" type="RayCast2D" parent="." index="10"]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCast_down" type="RayCast2D" parent="." index="11"]
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCast_left" type="RayCast2D" parent="." index="12"]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCast_right" type="RayCast2D" parent="." index="13"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 60 )

[node name="buy_time" type="Timer" parent="." index="15"]
one_shot = true
[connection signal="body_entered" from="vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="vision" to="." method="_on_vision_body_exited"]
[connection signal="timeout" from="VisionTimer" to="." method="_on_VisionTimer_timeout"]
